added compressing images func, test and docs
